@@ -1,3 +1,8 @@
+caputils-0.7.13
+---------------
+
+	* add: [capinfo] show present capture interfaces.
+
 caputils-0.7.12
 ---------------
 
